--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">LoginByBmob</string>
+    <string name="text_login">登录</string>
+    <string name="text_appDescribe">一个访问Bmob后端云的登录demo</string>
+    <string name="text_userHint">账号/手机号</string>
+    <string name="text_password">密码</string>
+    <string name="text_forgetPwd">忘记密码?</string>
 </resources>
