--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="text_userHint">账号/手机号</string>
     <string name="text_password">密码</string>
     <string name="text_forgetPwd">忘记密码?</string>
+    <string name="text_register">注册</string>
+    <string name="text_confirmPwd">确认密码</string>
 </resources>
